Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-16722

The Recycled folder is not drawn with transparent icon until the filebrowser window is maximized

    XMLWordPrintable

Details

    Description

      A funny bug, the title says it all:

      Reproduction steps

      • open filebrowser
      • browse to C:\
      • observe how the recycled folders icon looks
      • then maximize the window and look at its icon again

      Expected result

      • The icon should not change upon maximizing and should always be drawn tranparent

      Observed result

      Same happens for pagefile.sys
      Can anyone confirm this observation on master please?

      Attachments

        Issue Links

          Activity

            People

              StartForKiller Jesús Sanz del Rey
              reactosfanboy reactosfanboy
              Votes:
              2 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: