[COMCTL32] Invalidate LVIS_CUT selected items too (#4218)

This fixes icons that should be drawn transparently not showing as such until window gets repainted.
For example, hidden shell folders that are not drawn transparently until the filebrowser window is resized...

CORE-16722